# mkdocs-asciinema

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
src/mkdocs_asciinema/: plugin.py
