[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "mkdocs-asciinema"
version = "0.0.1"
authors = [
  { name="ZhenyuanLau", email="zhenyuanlau@outlook.com" },
]
description = "A Mkdocs Plugin for asciinema player"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "mkdocs",
    "beautifulsoup4",
]

[tool.setuptools.packages]
find = {}

[project.entry-points."mkdocs.plugins"]
mkdocs-asciinema = "mkdocs_asciinema.plugin:MkdocsAsciinemaPlugin"
